testsuite/tests/dependent/should_fail/T14066g.hs
{-# LANGUAGE TypeInType #-}

module T14066g where

import Data.Proxy

type P k a = Proxy (a :: k)
